<resources>
    <string name="app_name">EDUSYNC</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear_diary">Clear Diary</string>
    <string name="clear_notes">Clear Notes</string>
    <string name="clear_homeworks">Clear Homeworks</string>
    <string name="clear_all">Clear All</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="diary">Diary</string>
    <string name="homeworks">Homeworks</string>
    <string name="edusync">EDUSYNC</string>
    <string name="your_homeworks">Your Homeworks</string>
    <string name="your_diary">Your Diary</string>
    <string name="your_notes">Your Notes</string>
    <string name="new_note">New Note</string>
    <string name="new_homework">New Homework</string>
    <string name="edit_diary">Edit Diary</string>
    <string name="name_homework">Name Homework</string>
    <string name="save">Save</string>
    <string name="delete">delete</string>
    <string name="name">name</string>
    <string name="auditory">auditory</string>
    <string name="start_time">start time</string>
    <string name="end_time">end time</string>
    <string name="back">Back</string>
    <string name="enter_text">Enter text...</string>
    <string name="schedule">Schedule</string>
    <string name="note_name">Note name</string>
    <string name="info">Info</string>
    <string name="dedline_day">Dedline Day</string>
    <string name="dedline_time">Dedline Time</string>
    <string name="task">Task</string>
    <string name="edit_hw">Edit hw</string>
    <string name="edit_schedule">Edit Schedule</string>
</resources>